<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/endGuidline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startGuidline"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_person_24"
        app:helperText="@string/required_asterisk"
        app:helperTextTextColor="@color/red"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:prefixText="+91"
        app:prefixTextColor="@color/purple_500"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="textPersonName"
            android:autofillHints="username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        android:layout_height="wrap_content"
        app:helperText="@string/required_asterisk"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuidline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/startGuidline"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/startGuidline"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/endGuidline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/startGuidline"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/endGuidline"
        android:text="@string/user_name_password_note"
        android:textSize="12sp"
        />

    <include
        android:id="@+id/llProgressBar"
        android:visibility="gone"
        layout="@layout/view_progress"
        tools:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>